# nua-projects-sandbox

aip-mini/: .gitignore  Makefile  pyproject.toml  tasks.py  wsgi.py
aip-mini/etc/: settings.toml
aip-mini/nua/: nua-config.toml
aip-mini/src/app/: cli.py  extensions.py  logging.py  main.py  views.py
aip-mini/tests/: test_smoke.py
